test/corpus/L1/negative/cascade-no-receiver.st
"---
kind: negative
section: error.cascade-no-receiver
codes: E_CASCADE_NO_RECEIVER
note: cascade `;` whose head `3` is not a message send (R9); single error, the orphan `;` is drained in recovery
---"
3 ; foo
